--- a/css/modules/base/_typography.scss
+++ b/css/modules/base/_typography.scss
@@ -39,6 +39,7 @@ h6 {
 }
 
 p {
+  font-size: $base-font-size * 1.2;
   margin: 0 0 ($base-line-height * .5);
 }
 
